	PR c/40033 	* c-typeck.c (c_finish_stmt_expr): Do not wrap error_mark_node in 	a C_MAYBE_CONST_EXPR.

testsuite:
	* gcc.dg/noncompile/pr40033-1.c: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@153522 138bc75d-0d04-0410-961f-82ee72b054a4